--- a/Produtos/produtos.css
+++ b/Produtos/produtos.css
@@ -39,7 +39,7 @@ nav a:hover{
     padding: 50px 0;
 }
 
-.produtos li {
+.produtos li{
     display: inline-block;
     text-align: center;
     width: 30%;
@@ -49,6 +49,18 @@ nav a:hover{
     box-sizing: border-box;
     border: 2px solid #000000;
     border-radius: 10px;
+}
+
+.produtos li:hover{
+    border-color: #C78C19;
+}
+
+.produtos li:active{
+    border-color: #088c19;
+}
+
+.produtos li:hover h2{
+    font-size: 34px;
 }
 
 .produtos h2{
@@ -64,4 +76,16 @@ nav a:hover{
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+footer{
+    text-align: center;
+    background: url("./imagens/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
 }
