--- a/Produtos/style.css
+++ b/Produtos/style.css
@@ -80,7 +80,7 @@ nav a:hover{
 
 footer{
     text-align: center;
-    background: url("./imagens/bg.jpg");
+    background: url("../imagens/bg.jpg");
     padding: 40px 0;
 }
 
@@ -88,4 +88,30 @@ footer{
     color: #FFFFFF;
     font-size: 13px;
     margin-top: 20px;
+}
+
+main{
+    width: 940px;
+    margin: 0 auto;
+}
+
+form{
+    margin: 40px 0;
+}
+
+form label, form p{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox{
+    margin: 20px 0;
 }
