--- a/Produtos/style.css
+++ b/Produtos/style.css
@@ -94,11 +94,6 @@ footer{
     margin-top: 20px;
 }
 
-main{
-    width: 940px;
-    margin: 0 auto;
-}
-
 form{
     margin: 40px 0;
 }
@@ -165,6 +160,13 @@ td, th{
     clear: left;
 }
 
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
 .principal p{
     margin: 0 0 1em;
 }
@@ -185,15 +187,23 @@ td, th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
 }
+
 
 .mapa p{
     margin: 0 0 2em;
     text-align: center;
 }
 
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto;
+}
+
 .beneficios{
    padding: 3em 0; 
+   background: #888888;
 }
 
 .conteudo-beneficios{
@@ -215,6 +225,10 @@ td, th{
     font-weight: bold;
 }
 
+.itens:before{
+    content: '🟉';
+}
+
 .imagem-beneficios{
     width: 60%;
 }
@@ -223,3 +237,4 @@ td, th{
     width: 560px;
     margin: 2em auto;
 }
+
