--- a/Produtos/style.css
+++ b/Produtos/style.css
@@ -231,6 +231,13 @@ td, th{
 
 .imagem-beneficios{
     width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px #000000   ;
+}
+
+.imagem-beneficios:hover{
+    opacity: 0.3;
 }
 
 .video{
@@ -240,4 +247,22 @@ td, th{
 
 .form-main{
     margin-left: 100px;
+}
+
+@media screen and (max-width: 480px){
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+        width: auto;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios{
+        width: 100%;
+    }
 }
